# stellar-plague

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  package-lock.json  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: package-lock.json  package.json
backend/src/: index.ts
backend/src/lib/: logger.ts
backend/src/routes/: rooms.ts
backend/src/socket/: handlers.ts
backend/src/types/: game.ts
contracts/: Cargo.toml
contracts/src/game/: Cargo.toml  lib.rs
contracts/src/token/: Cargo.toml  lib.rs
contracts/src/zk/: lib.rs
contracts/test/: game_test.rs
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/game/: page.tsx
frontend/src/app/lobby/: page.tsx
frontend/src/hooks/: useGameState.ts  useWallet.ts
frontend/src/lib/: contract.ts  logger.ts  zk.ts
frontend/src/types/: game.ts
zk/circuits/: infection_proof.nr  innocence_proof.nr  role_commitment.nr
