[workspace]
members = [
    "src/game",
    "src/zk",
    "src/token",
]
resolver = "2"

[workspace.dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
